--- a/buildfiles/msvc/rpcs3_release.props
+++ b/buildfiles/msvc/rpcs3_release.props
@@ -27,6 +27,7 @@
         LLVMBitWriter.lib;
         LLVMCFGuard.lib;
         LLVMCodeGen.lib;
+        LLVMCodeGenData.lib;
         LLVMCodeGenTypes.lib;
         LLVMCore.lib;
         LLVMCoroutines.lib;
@@ -60,6 +61,7 @@
         LLVMInstCombine.lib;
         LLVMInstrumentation.lib;
         LLVMIntelJITEvents.lib;
+        LLVMIntelJITProfiling.lib;
         LLVMInterfaceStub.lib;
         LLVMInterpreter.lib;
         LLVMipo.lib;
@@ -89,13 +91,14 @@
         LLVMProfileData.lib;
         LLVMRemarks.lib;
         LLVMRuntimeDyld.lib;
+        LLVMSandboxIR.lib;
         LLVMScalarOpts.lib;
         LLVMSelectionDAG.lib;
         LLVMSupport.lib;
         LLVMSymbolize.lib;
         LLVMTableGen.lib;
+        LLVMTableGenBasic.lib;
         LLVMTableGenCommon.lib;
-        LLVMTableGenGlobalISel.lib;
         LLVMTarget.lib;
         LLVMTargetParser.lib;
         LLVMTextAPI.lib;
