--- a/rpcs3/rpcs3qt/CMakeLists.txt
+++ b/rpcs3/rpcs3qt/CMakeLists.txt
@@ -163,8 +163,10 @@ add_library(rpcs3_ui STATIC
     ../Input/ps_move_tracker.cpp
     ../Input/raw_mouse_config.cpp
     ../Input/raw_mouse_handler.cpp
-    ../Input/sdl_pad_handler.cpp
+    ../Input/sdl_camera_handler.cpp
+    ../Input/sdl_camera_video_sink.cpp
     ../Input/sdl_instance.cpp
+    ../Input/sdl_pad_handler.cpp
     ../Input/skateboard_pad_handler.cpp
     ../Input/xinput_pad_handler.cpp
 
