--- a/rpcs3/emucore.vcxproj.filters
+++ b/rpcs3/emucore.vcxproj.filters
@@ -130,6 +130,9 @@
     <Filter Include="Emu\GPU\RSX\Overlays\Trophies">
       <UniqueIdentifier>{caf84300-5c45-4340-bd9a-8ac859409351}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Emu\GPU\RSX\Program\MSAA">
+      <UniqueIdentifier>{ce6d6b90-8313-4273-b46c-d92bd450c002}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Crypto\aes.cpp">
@@ -2801,6 +2804,30 @@
     </None>
     <None Include="Emu\CPU\Backends\AArch64\AArch64Signal.cpp">
       <Filter>Emu\CPU\Backends\AArch64</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\ColorResolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\ColorUnresolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\DepthResolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\DepthStencilResolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\DepthStencilUnresolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\DepthUnresolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\StencilResolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
+    </None>
+    <None Include="Emu\RSX\Program\MSAA\StencilUnresolvePass.glsl">
+      <Filter>Emu\GPU\RSX\Program\MSAA</Filter>
     </None>
   </ItemGroup>
 </Project>
