--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -88,7 +88,7 @@ jobs:
           compression-level: 0
 
   Windows_Build:
-    runs-on: windows-latest
+    runs-on: windows-2025
     env:
       COMPILER: msvc
       QT_VER_MAIN: '6'
