--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -79,17 +79,16 @@ else()
 		# we don't have the system libusb, so we compile from submodule
 		unset(LIBUSB_LIBRARIES CACHE)
 		add_subdirectory(libusb EXCLUDE_FROM_ALL)
+
+		if (NOT TARGET usb-1.0 AND TARGET usb-1.0-static)
+			add_library(usb-1.0 ALIAS usb-1.0-static)
+		endif()
 	endif()
 endif()
 
 
 # hidapi
-if (NOT ANDROID)
-	add_subdirectory(hidapi)
-else()
-	add_library(3rdparty_hidapi INTERFACE)
-	target_compile_definitions(3rdparty_hidapi INTERFACE WITHOUT_HIDAPI=1)
-endif()
+add_subdirectory(hidapi)
 
 # glslang
 add_subdirectory(glslang EXCLUDE_FROM_ALL)
@@ -278,12 +277,16 @@ if(NOT ANDROID)
 		if (WIN32)
 			target_link_libraries(3rdparty_ffmpeg INTERFACE "Bcrypt.lib")
 		endif()
-	else()
+
 		find_library(FFMPEG_LIB_AVFORMAT avformat PATHS ${FFMPEG_LIB_DIR} NO_DEFAULT_PATH)
 		find_library(FFMPEG_LIB_AVCODEC avcodec PATHS ${FFMPEG_LIB_DIR} NO_DEFAULT_PATH)
 		find_library(FFMPEG_LIB_AVUTIL avutil PATHS ${FFMPEG_LIB_DIR} NO_DEFAULT_PATH)
 		find_library(FFMPEG_LIB_SWSCALE swscale PATHS ${FFMPEG_LIB_DIR} NO_DEFAULT_PATH)
 		find_library(FFMPEG_LIB_SWRESAMPLE swresample PATHS ${FFMPEG_LIB_DIR} NO_DEFAULT_PATH)
+
+		if (FFMPEG_LIB_AVFORMAT MATCHES "FFMPEG_LIB_AVFORMAT-NOTFOUND")
+			message(FATAL_ERROR "@#$%! FFMPEG NOT FOUND! ${FFMPEG_LIB_DIR}")
+		endif()
 
 		target_link_libraries(3rdparty_ffmpeg
 		INTERFACE
@@ -293,10 +296,10 @@ if(NOT ANDROID)
 			${FFMPEG_LIB_SWSCALE}
 			${FFMPEG_LIB_SWRESAMPLE}
 		)
-	endif()
 		target_include_directories(3rdparty_ffmpeg INTERFACE "ffmpeg/include")
 	endif()
 endif()
+
 
 # GLEW
 add_library(3rdparty_glew INTERFACE)
