Fix Azure and Github Actions CI caching

--- a/.github/workflows/rpcs3.yml
+++ b/.github/workflows/rpcs3.yml
@@ -60,7 +60,9 @@ jobs:
         uses: actions/cache@main
         with:
           path: ${{ env.CCACHE_DIR }}
-          key: ${{ runner.os }}-ccache-${{ matrix.compiler }}
+          key: ${{ runner.os }}-ccache-${{ matrix.compiler }}-${{ runner.arch }}-${{github.run_id}}
+          restore-keys: | 
+            ${{ runner.os }}-ccache-${{ matrix.compiler }}-${{ runner.arch }}-
 
       - name: Docker setup and build
         run: |
@@ -118,8 +120,11 @@ jobs:
         uses: actions/cache@main
         with:
           path: ${{ env.CACHE_DIR }}
-          key: "${{ runner.os }}-${{ env.COMPILER }}-${{ env.QT_VER }}-${{ env.VULKAN_SDK_SHA }}-${{ hashFiles('llvm.lock') }}-${{ hashFiles('glslang.lock') }}"
-          restore-keys: ${{ runner.os }}-${{ env.COMPILER }}
+          key: "${{ runner.os }}-${{ env.COMPILER }}-${{ env.QT_VER }}-${{ env.VULKAN_SDK_SHA }}-${{ hashFiles('llvm.lock') }}-${{ hashFiles('glslang.lock') }}-${{github.run_id}}"
+          restore-keys: |
+            "${{ runner.os }}-${{ env.COMPILER }}-${{ env.QT_VER }}-${{ env.VULKAN_SDK_SHA }}-"
+            "${{ runner.os }}-${{ env.COMPILER }}-${{ env.QT_VER }}-"
+            "${{ runner.os }}-${{ env.COMPILER }}-"
 
       - name: Download and unpack dependencies
         shell: bash
