--- a/rpcs3/emucore.vcxproj.filters
+++ b/rpcs3/emucore.vcxproj.filters
@@ -1342,6 +1342,9 @@
     <ClCompile Include="Emu\RSX\Program\FragmentProgramRegister.cpp">
       <Filter>Emu\GPU\RSX\Program</Filter>
     </ClCompile>
+    <ClCompile Include="..\Utilities\date_time.cpp">
+      <Filter>Utilities</Filter>
+    </ClCompile>
     <ClCompile Include="Emu\RSX\GSFrameBase.cpp">
       <Filter>Emu\GPU\RSX\Game Window</Filter>
     </ClCompile>
