--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,7 +78,12 @@ jobs:
     VULKAN_VER: '1.3.268.0'
     VULKAN_SDK_SHA: '8459ef49bd06b697115ddd3d97c9aec729e849cd775f5be70897718a9b3b9db5'
     VULKAN_SDK: C:\VulkanSDK\$(VULKAN_VER)
-    CACHE_DIR: ./cache
+    CCACHE_SHA: '6252f081876a9a9f700fae13a5aec5d0d486b28261d7f1f72ac11c7ad9df4da9'
+    CCACHE_BIN_DIR: 'C:\ccache_bin'
+    CCACHE_DIR: 'C:\ccache'
+    CCACHE_INODECACHE: 'true'
+    CCACHE_SLOPPINESS: 'time_macros'
+    DEPS_CACHE_DIR: ./dependency_cache
     UPLOAD_COMMIT_HASH: 7d09e3be30805911226241afbb14f8cdc2eb054e
     UPLOAD_REPO_FULL_NAME: "RPCS3/rpcs3-binaries-win"
 
@@ -91,13 +96,17 @@ jobs:
 
     - task: Cache@2
       inputs:
-        key: $(Agent.OS) | $(COMPILER) | "$(QT_VER)" | $(VULKAN_SDK_SHA) | llvm.lock | glslang.lock | $(Build.SourceVersion)
-        path: $(CACHE_DIR)
-        restoreKeys: |
-          $(Agent.OS) | $(COMPILER) | "$(QT_VER)" | $(VULKAN_SDK_SHA)
-          $(Agent.OS) | $(COMPILER) | "$(QT_VER)"
-          $(Agent.OS) | $(COMPILER)
-      displayName: Cache
+        key: ccache | $(Agent.OS) | $(COMPILER) | "$(Build.SourceVersion)"
+        path: $(CCACHE_DIR)
+        restoreKeys: 
+          ccache | $(Agent.OS) | $(COMPILER)
+      displayName: Build Ccache
+    
+    - task: Cache@2
+      inputs:
+        key: $(Agent.OS) | $(COMPILER) | "$(QT_VER)" | $(VULKAN_SDK_SHA) | $(CCACHE_SHA) | llvm.lock | glslang.lock
+        path: $(DEPS_CACHE_DIR)
+      displayName: Dependencies Cache
 
     - bash: .ci/setup-windows.sh
       displayName: Download and unpack dependencies
@@ -111,6 +120,7 @@ jobs:
         maximumCpuCount: true
         platform: x64
         configuration: 'Release'
+        msbuildArgs: /p:CLToolPath=$(CCACHE_BIN_DIR) /p:UseMultiToolTask=true /p:CustomAfterMicrosoftCommonTargets="$(Build.SourcesDirectory)\buildfiles\msvc\ci_no_debug_info.targets"
       displayName: Compile RPCS3
 
     - bash: .ci/deploy-windows.sh
