Prevent x11/wayland build mismatch

--- a/rpcs3/CMakeLists.txt
+++ b/rpcs3/CMakeLists.txt
@@ -29,6 +29,9 @@ if(UNIX AND NOT APPLE)
     endif()
     find_package(Wayland)
     if(WAYLAND_FOUND)
+        if(X11_FOUND)
+            remove_definitions(-DHAVE_X11)
+        endif()
         add_definitions(-DHAVE_WAYLAND)
     endif()
 endif()
